fix hamburger design on mobile

--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -99,11 +99,10 @@ nav li:hover ul {
         height: 50px;
         width: 50px;
         margin-left: auto;
-        position:relative;
     }
-    .hamburger{}
     .nav{
-        display:none
+        padding: 15px;
+        display: flex;
+        background-color: #00aeff;
     }
-}
 }
